bootstrap/rig-system/kustomize/operations-manager/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: operations-manager
  namespace: rig-system
spec:
  rules:
    - host: operations-manager.kind
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: operations-manager
                port:
                  number: 8000
